Sort package dependencies (w/ sort-package-json) and remove logging

--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -22,14 +22,41 @@
     "prettier": "prettier --write \"{,.,**/,.jhipster/**/}*.{md,json,yml,js,ts,tsx}\""
   },
   "dependencies": {
+    "@expo/vector-icons": "EXPO_REPLACE_WITH_VERSION",
+    "@react-native-async-storage/async-storage": "EXPO_REPLACE_WITH_VERSION",
+    "@react-native-community/datetimepicker": "EXPO_REPLACE_WITH_VERSION",
+    "@react-native-masked-view/masked-view": "REPLACE_WITH_VERSION",
+    "@react-native-picker/picker": "EXPO_REPLACE_WITH_VERSION",
+    "@react-navigation/devtools": "REPLACE_WITH_VERSION",
+    "@react-navigation/drawer": "REPLACE_WITH_VERSION",
+    "@react-navigation/native": "REPLACE_WITH_VERSION",
+    "@react-navigation/stack": "REPLACE_WITH_VERSION",
     "apisauce": "REPLACE_WITH_VERSION",
+    <%_ if (context.authenticationType === 'oauth2') { _%>
+    "expo-auth-session": "EXPO_REPLACE_WITH_VERSION",
+    "expo-random": "EXPO_REPLACE_WITH_VERSION",
+    "expo-web-browser": "EXPO_REPLACE_WITH_VERSION",
+    <%_ } _%>
+    "expo-constants": "EXPO_REPLACE_WITH_VERSION",
     "expo-image-picker": "REPLACE_WITH_VERSION",
+    "expo-linking": "EXPO_REPLACE_WITH_VERSION",
+    "expo-splash-screen": "EXPO_REPLACE_WITH_VERSION",
     "format-json": "REPLACE_WITH_VERSION",
+    "formik": "REPLACE_WITH_VERSION",
     "identity-obj-proxy": "REPLACE_WITH_VERSION",
     "lodash": "REPLACE_WITH_VERSION",
     "querystringify": "REPLACE_WITH_VERSION",
     "ramda": "REPLACE_WITH_VERSION",
+    "react-datepicker": "REPLACE_WITH_VERSION",
+    "react-native-gesture-handler": "EXPO_REPLACE_WITH_VERSION",
     "react-native-keyboard-aware-scroll-view": "REPLACE_WITH_VERSION",
+    "react-native-modal-datetime-picker": "REPLACE_WITH_VERSION",
+    "react-native-picker-select": "REPLACE_WITH_VERSION",
+    "react-native-reanimated": "EXPO_REPLACE_WITH_VERSION",
+    "react-native-safe-area-context": "EXPO_REPLACE_WITH_VERSION",
+    "react-native-screens": "EXPO_REPLACE_WITH_VERSION",
+    "react-native-sectioned-multi-select": "REPLACE_WITH_VERSION",
+    "react-native-web": "EXPO_REPLACE_WITH_VERSION",
     "react-redux": "REPLACE_WITH_VERSION",
     "redux": "REPLACE_WITH_VERSION",
     "redux-persist": "REPLACE_WITH_VERSION",
@@ -41,72 +68,45 @@
     "sockjs-client": "REPLACE_WITH_VERSION",
     "net": "REPLACE_WITH_VERSION",
     <%_ } _%>
-    "@react-native-masked-view/masked-view": "REPLACE_WITH_VERSION",
-    "@react-navigation/drawer": "REPLACE_WITH_VERSION",
-    "@react-navigation/stack": "REPLACE_WITH_VERSION",
-    "@react-navigation/native": "REPLACE_WITH_VERSION",
-    "@react-navigation/devtools":"REPLACE_WITH_VERSION",
-    "react-native-sectioned-multi-select": "REPLACE_WITH_VERSION",
-    "formik": "REPLACE_WITH_VERSION",
-    "react-datepicker": "REPLACE_WITH_VERSION",
-    "react-native-modal-datetime-picker": "REPLACE_WITH_VERSION",
-    "react-native-picker-select": "REPLACE_WITH_VERSION",
-    "yup": "REPLACE_WITH_VERSION",
-    "@react-native-async-storage/async-storage": "EXPO_REPLACE_WITH_VERSION",
-    "react-native-gesture-handler": "EXPO_REPLACE_WITH_VERSION",
-    "react-native-reanimated": "EXPO_REPLACE_WITH_VERSION",
-    "react-native-safe-area-context": "EXPO_REPLACE_WITH_VERSION",
-    "react-native-screens": "EXPO_REPLACE_WITH_VERSION",
-    "react-native-web": "EXPO_REPLACE_WITH_VERSION",
-    "@expo/vector-icons": "EXPO_REPLACE_WITH_VERSION",
-    "expo-constants": "EXPO_REPLACE_WITH_VERSION",
-    "expo-linking": "EXPO_REPLACE_WITH_VERSION",
-    "@react-native-community/datetimepicker": "EXPO_REPLACE_WITH_VERSION",
-    "@react-native-picker/picker": "EXPO_REPLACE_WITH_VERSION",
-    <%_ if (context.authenticationType === 'oauth2') { _%>
-    "expo-auth-session": "EXPO_REPLACE_WITH_VERSION",
-    "expo-web-browser": "EXPO_REPLACE_WITH_VERSION",
-    "expo-random": "EXPO_REPLACE_WITH_VERSION",
-    <%_ } _%>
-    "expo-splash-screen": "EXPO_REPLACE_WITH_VERSION"
+    "yup": "REPLACE_WITH_VERSION"
   },
   "devDependencies": {
+    "@expo/webpack-config": "EXPO_REPLACE_WITH_VERSION",
+    "@react-native-community/eslint-config": "REPLACE_WITH_VERSION",
     "@storybook/addons": "REPLACE_WITH_VERSION",
     "@storybook/react-native": "REPLACE_WITH_VERSION",
     "@storybook/theming": "REPLACE_WITH_VERSION",
+    "babel-jest": "REPLACE_WITH_VERSION",
     "babel-preset-env": "REPLACE_WITH_VERSION",
     "buffer": "REPLACE_WITH_VERSION",
-    "enzyme": "REPLACE_WITH_VERSION",
-    "enzyme-adapter-react-16": "REPLACE_WITH_VERSION",
-    "@react-native-community/eslint-config": "REPLACE_WITH_VERSION",
-    "babel-jest": "REPLACE_WITH_VERSION",
-    "jest": "REPLACE_WITH_VERSION",
-    "expect": "REPLACE_WITH_VERSION",
-    "eslint": "REPLACE_WITH_VERSION",
-    "eslint-config-prettier": "REPLACE_WITH_VERSION",
-    "eslint-plugin-prettier": "REPLACE_WITH_VERSION",
-    "generator-jhipster-react-native": "<%= context.packageVersion %>",
-    <%_ if (!context.skipCommitHook) { _%>
-    "lint-staged": "REPLACE_WITH_VERSION",
-    <%_ } _%>
     <%_ if (context.detox) { _%>
     "detox": "REPLACE_WITH_VERSION",
     "@ruddell/detox-expo-helpers": "REPLACE_WITH_VERSION",
     "expo-detox-hook": "REPLACE_WITH_VERSION",
     "jest-circus": "REPLACE_WITH_VERSION",
     <%_ } _%>
-    "redux-devtools-extension": "REPLACE_WITH_VERSION",
-    "mockery": "REPLACE_WITH_VERSION",
-    "react-test-renderer": "REPLACE_WITH_VERSION",
-    "prettier": "REPLACE_WITH_VERSION",
-    "patch-package": "REPLACE_WITH_VERSION",
-    "typescript": "REPLACE_WITH_VERSION",
-    "rimraf": "REPLACE_WITH_VERSION",
+    "enzyme": "REPLACE_WITH_VERSION",
+    "enzyme-adapter-react-16": "REPLACE_WITH_VERSION",
+    "eslint": "REPLACE_WITH_VERSION",
+    "eslint-config-prettier": "REPLACE_WITH_VERSION",
+    "eslint-plugin-prettier": "REPLACE_WITH_VERSION",
+    "expect": "REPLACE_WITH_VERSION",
+    "generator-jhipster-react-native": "<%= context.packageVersion %>",
+    "jest": "REPLACE_WITH_VERSION",
     "jest-expo": "EXPO_REPLACE_WITH_VERSION",
-    "@expo/webpack-config": "EXPO_REPLACE_WITH_VERSION",
+    <%_ if (!context.skipCommitHook) { _%>
+    "lint-staged": "REPLACE_WITH_VERSION",
+    <%_ } _%>
+    "mockery": "REPLACE_WITH_VERSION",
+    "patch-package": "REPLACE_WITH_VERSION",
     "path-exists": "REPLACE_WITH_VERSION",
+    "prettier": "REPLACE_WITH_VERSION",
+    "react-test-renderer": "REPLACE_WITH_VERSION",
+    "redux-devtools-extension": "REPLACE_WITH_VERSION",
     "resolve": "REPLACE_WITH_VERSION",
-    "tapable": "REPLACE_WITH_VERSION"
+    "rimraf": "REPLACE_WITH_VERSION",
+    "tapable": "REPLACE_WITH_VERSION",
+    "typescript": "REPLACE_WITH_VERSION"
   },
   <%_ if (!context.skipCommitHook) { _%>
   "lint-staged": {
