Fix replace variable

--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -38,7 +38,7 @@
     "expo-web-browser": "EXPO_REPLACE_WITH_VERSION",
     <%_ } _%>
     "expo-constants": "EXPO_REPLACE_WITH_VERSION",
-    "expo-image-picker": "REPLACE_WITH_VERSION",
+    "expo-image-picker": "EXPO_REPLACE_WITH_VERSION",
     "expo-linking": "EXPO_REPLACE_WITH_VERSION",
     "expo-splash-screen": "EXPO_REPLACE_WITH_VERSION",
     "format-json": "REPLACE_WITH_VERSION",
