fix Detox iOS error "The "ios.sim.release" configuration utilizes a deprecated all-in-one schema, that is not supported by the current version of Detox."

--- a/generators/app/templates/.detoxrc.json.ejs
+++ b/generators/app/templates/.detoxrc.json.ejs
@@ -2,9 +2,7 @@
   "configurations": {
     "ios.sim.release": {
       "binaryPath": "e2e/Exponent.app",
-      "device": {
-        "type": "iPhone 12"
-      }
+      "type": "ios.simulator",
     }
   },
   "artifacts": {
