fix Detox iOS error 5 "The "ios.sim.release" configuration utilizes a deprecated all-in-one schema, that is not supported by the current version of Detox."

--- a/generators/app/templates/.detoxrc.json.ejs
+++ b/generators/app/templates/.detoxrc.json.ejs
@@ -2,7 +2,8 @@
   "configurations": {
     "ios.sim.release": {
       "binaryPath": "e2e/Exponent.app",
-      "device": "ios.simulator"
+      "device": "ios.simulator",
+      "app": "ios.release"
     }
   },
   "devices": {
