fix Detox iOS error 6 "The "ios.sim.release" configuration utilizes a deprecated all-in-one schema, that is not supported by the current version of Detox."

--- a/generators/app/templates/.detoxrc.json.ejs
+++ b/generators/app/templates/.detoxrc.json.ejs
@@ -6,6 +6,12 @@
       "app": "ios.release"
     }
   },
+  "apps": {
+    "ios.release": {
+      "type": "ios.app",
+      "binaryPath": "e2e/Exponent.app"
+    }
+  },
   "devices": {
     "ios.simulator": {
       "type": "ios.simulator",
