fix #889 Detox iOS error in GitHub Actions. "The "ios.sim.release" configuration utilizes a deprecated all-in-one schema, that is not supported by the current version of Detox."

--- a/generators/app/templates/.detoxrc.json.ejs
+++ b/generators/app/templates/.detoxrc.json.ejs
@@ -2,10 +2,24 @@
   "configurations": {
     "ios.sim.release": {
       "binaryPath": "e2e/Exponent.app",
+      "device": "ios.simulator",
+      "app": "ios.release"
+    }
+  },
+  "apps": {
+    "ios.release": {
+      "type": "ios.app",
+      "binaryPath": "e2e/Exponent.app"
+    }
+  },
+  "devices": {
+    "ios.simulator": {
       "type": "ios.simulator",
-      "device": {
-        "type": "iPhone 12"
-      }
+      "device": { "type": "iPhone 12" }
+    },
+    "android.emulator": {
+      "type": "android.apk",
+      "device": { "avdName": "Pixel_30_API" }
     }
   },
   "artifacts": {
