Add react-dom to dependencies

--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -48,6 +48,7 @@
     "querystringify": "REPLACE_WITH_VERSION",
     "ramda": "REPLACE_WITH_VERSION",
     "react-datepicker": "REPLACE_WITH_VERSION",
+    "react-dom": "REPLACE_WITH_VERSION",
     "react-native-gesture-handler": "EXPO_REPLACE_WITH_VERSION",
     "react-native-keyboard-aware-scroll-view": "REPLACE_WITH_VERSION",
     "react-native-modal-datetime-picker": "REPLACE_WITH_VERSION",
