--- a/generators/app/templates/test/spec/shared/navigation/drawer/drawer-button.spec.js.ejs
+++ b/generators/app/templates/test/spec/shared/navigation/drawer/drawer-button.spec.js.ejs
@@ -1,22 +1,24 @@
-import 'react-native'
-import React from 'react'
-import { shallow } from 'enzyme'
-import renderer from 'react-test-renderer'
+/**
+ * @jest-environment jsdom
+ */
+import 'react-native';
+import React from 'react';
+import { fireEvent, render, screen } from '@testing-library/react-native';
+import renderer from 'react-test-renderer';
 
 import DrawerButton from '../../../../../app/navigation/drawer/drawer-button'
 
 test('DrawerButton component renders correctly', () => {
-  const tree = renderer.create(<DrawerButton onPress={() => {}} text='hi' />).toJSON()
-  expect(tree).toMatchSnapshot()
-})
+  const tree = renderer.create(<DrawerButton onPress={() => {}} text="hi" />).toJSON();
+  expect(tree).toMatchSnapshot();
+});
 
-test('DrawerButton onPress works as expected', () => {
-  let i = 0
-  const onPress = () => i++
-  const wrapperPress = shallow(<DrawerButton onPress={onPress} text='hi' />)
+test('onPress', () => {
+  let i = 0;
+  const onPress = () => i++;
+  render(<DrawerButton onPress={onPress} text="hi" />);
 
-  expect(wrapperPress.prop('onPress')).toBe(onPress) // the component's onPress uses the right handler
-  expect(i).toBe(0)
-  wrapperPress.simulate('press')
-  expect(i).toBe(1)
-})
+  expect(i).toBe(0);
+  fireEvent.press(screen.getByText('HI'));
+  expect(i).toBe(1);
+});
