--- a/generators/app/templates/test/spec/shared/components/search-bar/search-bar.spec.js.ejs
+++ b/generators/app/templates/test/spec/shared/components/search-bar/search-bar.spec.js.ejs
@@ -1,23 +1,24 @@
-import 'react-native'
-import React from 'react'
-import { shallow } from 'enzyme'
-import renderer from 'react-test-renderer'
+/**
+ * @jest-environment jsdom
+ */
+import 'react-native';
+import React from 'react';
+import { render, screen, fireEvent } from '@testing-library/react-native';
+import renderer from 'react-test-renderer';
 
-import SearchBar from '../../../../../app/shared/components/search-bar/search-bar'
+import SearchBar from '../../../../../app/shared/components/search-bar/search-bar';
 
 test('SearchBar component renders correctly', async () => {
-  const tree = renderer.create(<SearchBar onSearch={() => {}} onCancel={() => {}} />).toJSON()
-  expect(tree).toMatchSnapshot()
-})
+  const tree = renderer.create(<SearchBar onSearch={() => {}} onCancel={() => {}} />).toJSON();
+  expect(tree).toMatchSnapshot();
+});
 
 test('onSearch', async () => {
-  const onSearch = () => {}
-  const onCancel = () => {}
-  const searchTerm = ''
-  const onSubmitEditing = onSearch.bind(searchTerm)
-  const wrapperPress = shallow(<SearchBar onSearch={onSearch} onCancel={onCancel} searchTerm={searchTerm} />)
+  const onSearch = () => {};
+  const onCancel = () => {};
+  const searchTerm = '';
+  const onSubmitEditing = onSearch.bind(searchTerm);
+  render(<SearchBar onSearch={onSearch} onCancel={onCancel} searchTerm={searchTerm} />);
 
-  // checks that the methods use the right handlers
-  expect(wrapperPress.findWhere((node) => node.prop('testID') === 'searchTextInput').prop('onChangeText')).toBe(onSearch) // uses the right handler
-  expect(JSON.stringify(wrapperPress.findWhere((node) => node.prop('testID') === 'searchTextInput').prop('onSubmitEditing'))).toEqual(JSON.stringify(onSubmitEditing))
-})
+  expect(JSON.stringify(screen.getByPlaceholderText('Search').props['onSubmitEditing'])).toEqual(JSON.stringify(onSubmitEditing));
+});
