--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -10,7 +10,7 @@
     "publish": "expo publish",
     "build:ios": "expo build:ios",
     "build:android": "expo build:android",
-    "build:web": "expo export:web",
+    "build:web": "expo export",
     <%_ if (!context.skipCommitHook) { _%>
     "precommit": "lint-staged",
     <%_ } _%>
