comment css import

--- a/generators/app/templates/app/shared/components/form/inputs/jhi-date-input.web.js.ejs
+++ b/generators/app/templates/app/shared/components/form/inputs/jhi-date-input.web.js.ejs
@@ -1,7 +1,7 @@
 import React from 'react';
 import { View, StyleSheet, TextInput, Text } from 'react-native';
 import DatePicker from 'react-datepicker';
-import 'react-datepicker/dist/react-datepicker.css';
+// import 'react-datepicker/dist/react-datepicker.css';
 /* eslint-disable react-native/no-inline-styles */
 
 export default React.forwardRef((props, ref) => {
