--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -106,7 +106,7 @@
     "resolve": "REPLACE_WITH_VERSION",
     "rimraf": "REPLACE_WITH_VERSION",
     "tapable": "REPLACE_WITH_VERSION",
-    "typescript": "REPLACE_WITH_VERSION"
+    "typescript": "EXPO_REPLACE_WITH_VERSION"
   },
   <%_ if (!context.skipCommitHook) { _%>
   "lint-staged": {
