--- a/generators/app/templates/e2e/environment.js.ejs
+++ b/generators/app/templates/e2e/environment.js.ejs
@@ -1,4 +1,4 @@
-const { DetoxCircusEnvironment, SpecReporter, WorkerAssignReporter } = require('detox/runners/jest-circus');
+const { DetoxCircusEnvironment, SpecReporter, WorkerAssignReporter } = require('detox/runners/jest');
 const { init: initExpo } = require('@ruddell/detox-expo-helpers');
 
 class CustomDetoxEnvironment extends DetoxCircusEnvironment {
