--- a/generators/app/templates/.detoxrc.json.ejs
+++ b/generators/app/templates/.detoxrc.json.ejs
@@ -1,11 +1,22 @@
 {
-  "configurations": {
-    "ios.sim.release": {
+  "apps": {
+    "myApp.ios": {
+      "type": "ios.app",
       "binaryPath": "e2e/Exponent.app",
+    },
+  },
+  "devices": {
+    "simulator": {
       "type": "ios.simulator",
       "device": {
-        "type": "iPhone 12"
-      }
+        "type": "iPhone 12",
+      },
+    },
+  },
+  "configurations": {
+    "ios.sim.release": {
+      "device": "simulator",
+      "app": "myApp.ios",
     }
   },
   "artifacts": {
@@ -20,6 +31,10 @@
       }
     }
   },
-  "test-runner": "jest",
-  "runner-config": "./e2e/config.json"
+  testRunner: {
+    $0: 'jest',
+    args: {
+      config: './e2e/config.json',
+    },
+  },
 }
