--- a/generators/app/templates/e2e/environment.js.ejs
+++ b/generators/app/templates/e2e/environment.js.ejs
@@ -11,10 +11,7 @@ class CustomDetoxEnvironment extends DetoxCircusEnvironment {
 
     // This takes care of generating status logs on a per-spec basis. By default, Jest only reports at file-level.
     // This is strictly optional.
-    this.registerListeners({
-      SpecReporter,
-      WorkerAssignReporter,
-    });
+    this.registerListeners();
   }
 }
 
