--- a/generators/app/templates/e2e/environment.js.ejs
+++ b/generators/app/templates/e2e/environment.js.ejs
@@ -1,4 +1,4 @@
-const { DetoxCircusEnvironment, SpecReporter, WorkerAssignReporter } = require('detox/runners/jest');
+const { DetoxCircusEnvironment } = require('detox/runners/jest');
 const { init: initExpo } = require('@ruddell/detox-expo-helpers');
 
 class CustomDetoxEnvironment extends DetoxCircusEnvironment {
@@ -6,12 +6,6 @@ class CustomDetoxEnvironment extends DetoxCircusEnvironment {
     super(config, context);
 
     initExpo();
-    // Can be safely removed, if you are content with the default value (=300000ms)
-    this.initTimeout = 300000;
-
-    // This takes care of generating status logs on a per-spec basis. By default, Jest only reports at file-level.
-    // This is strictly optional.
-    this.registerListeners({});
   }
 }
 
