e2e: removed outdated test enviroment config.

--- a/generators/app/templates/e2e/config.json.ejs
+++ b/generators/app/templates/e2e/config.json.ejs
@@ -2,7 +2,7 @@
   "rootDir": "..",
   "testMatch": ["<rootDir>/e2e/**/*.spec.js"],
   "reporters": ["detox/runners/jest/reporter"],
-  "testEnvironment": "<rootDir>/e2e/environment",
+  "testEnvironment": "detox/runners/jest/testEnvironment",
   "globalSetup": "detox/runners/jest/globalSetup",
   "globalTeardown": "detox/runners/jest/globalTeardown",
   "testRunner": "jest-circus/runner",
