--- a/generators/app/templates/metro.config.js.ejs
+++ b/generators/app/templates/metro.config.js.ejs
@@ -7,6 +7,8 @@ const config = getDefaultConfig(__dirname, {
   isCSSEnabled: true,
 });
 
+config.resolver.resolverMainFields = ['sbmodern', ...config.resolver.resolverMainFields];
+
 config.resolver.sourceExts = process.env.RN_SRC_EXT
   ? [...process.env.RN_SRC_EXT.split(',').concat(config.resolver.sourceExts), 'mjs']
   : [...config.resolver.sourceExts, 'mjs'];
