--- a/generators/app/templates/metro.config.js.ejs
+++ b/generators/app/templates/metro.config.js.ejs
@@ -7,6 +7,9 @@ const config = getDefaultConfig(__dirname, {
   isCSSEnabled: true,
 });
 
+// https://github.com/dannyhw/expo-template-storybook/blob/24c892b62f953daeaf0ae6c52cb1331232d2c865/metro.config.js#L5-L7
+config.resolver.resolverMainFields = ['sbmodern', ...config.resolver.resolverMainFields];
+
 config.resolver.sourceExts = process.env.RN_SRC_EXT
   ? [...process.env.RN_SRC_EXT.split(',').concat(config.resolver.sourceExts), 'mjs']
   : [...config.resolver.sourceExts, 'mjs'];
