--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -2,6 +2,8 @@
   "name": "<%= context.reactNativeAppNameKebabCase %>",
   "version": "0.0.1",
   "scripts": {
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "test:watch": "jest --watch",
     "updateSnapshot": "jest --updateSnapshot",
     "coverage": "jest --coverage && open coverage/lcov-report/index.html || xdg-open coverage/lcov-report/index.html",
@@ -19,19 +21,23 @@
     "test:e2e": "./e2e/scripts/setup.sh && detox test --configuration ios.sim.release --retries 3 --loglevel trace --debug-synchronization 500",
     <%_ } _%>
     "postinstall": "patch-package",
-    "prettier": "prettier --write \"{,.,**/,.jhipster/**/}*.{md,json,yml,js,ts,tsx}\""
+    "prettier": "prettier --write \"{,.,**/,.jhipster/**/}*.{md,json,yml,js,ts,tsx}\"",
+    "start": "expo start",
+    "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "EXPO_REPLACE_WITH_VERSION",
     "@react-native-async-storage/async-storage": "EXPO_REPLACE_WITH_VERSION",
     "@react-native-community/datetimepicker": "EXPO_REPLACE_WITH_VERSION",
-    "@react-native-masked-view/masked-view": "REPLACE_WITH_VERSION",
+    "@react-native-masked-view/masked-view": "EXPO_REPLACE_WITH_VERSION",
     "@react-native-picker/picker": "EXPO_REPLACE_WITH_VERSION",
-    "@react-navigation/devtools": "REPLACE_WITH_VERSION",
+    "@react-navigation/devtools": "EXPO_REPLACE_WITH_VERSION",
     "@react-navigation/drawer": "REPLACE_WITH_VERSION",
     "@react-navigation/native": "REPLACE_WITH_VERSION",
     "@react-navigation/stack": "REPLACE_WITH_VERSION",
     "apisauce": "REPLACE_WITH_VERSION",
+    "expo": "EXPO_REPLACE_WITH_VERSION",
+    "expo-status-bar": "EXPO_REPLACE_WITH_VERSION",
     <%_ if (context.authenticationType === 'oauth2') { _%>
     "expo-auth-session": "EXPO_REPLACE_WITH_VERSION",
     "expo-random": "EXPO_REPLACE_WITH_VERSION",
@@ -48,7 +54,9 @@
     "querystringify": "REPLACE_WITH_VERSION",
     "ramda": "REPLACE_WITH_VERSION",
     "react-datepicker": "REPLACE_WITH_VERSION",
-    "react-dom": "REPLACE_WITH_VERSION",
+    "react": "EXPO_REPLACE_WITH_VERSION",
+    "react-dom": "EXPO_REPLACE_WITH_VERSION",
+    "react-native": "EXPO_REPLACE_WITH_VERSION",
     "react-native-gesture-handler": "EXPO_REPLACE_WITH_VERSION",
     "react-native-keyboard-aware-scroll-view": "REPLACE_WITH_VERSION",
     "react-native-modal-datetime-picker": "REPLACE_WITH_VERSION",
@@ -72,12 +80,15 @@
     "yup": "REPLACE_WITH_VERSION"
   },
   "devDependencies": {
+    "@babel/core": "EXPO_REPLACE_WITH_VERSION",
     "@react-native-community/eslint-config": "REPLACE_WITH_VERSION",
+    "@react-native-community/cli-server-api": "EXPO_REPLACE_WITH_VERSION",
     "@storybook/addons": "REPLACE_WITH_VERSION",
     "@storybook/react-native": "REPLACE_WITH_VERSION",
     "@storybook/theming": "REPLACE_WITH_VERSION",
     "@testing-library/jest-native": "REPLACE_WITH_VERSION",
     "@testing-library/react-native": "REPLACE_WITH_VERSION",
+    "@types/react": "EXPO_REPLACE_WITH_VERSION",
     "babel-jest": "REPLACE_WITH_VERSION",
     "babel-preset-env": "REPLACE_WITH_VERSION",
     "buffer": "REPLACE_WITH_VERSION",
