fix: rewrite reloadApp.

--- a/generators/app/templates/e2e/utils.js.ejs
+++ b/generators/app/templates/e2e/utils.js.ejs
@@ -107,18 +107,10 @@ const waitForElementToBeVisibleById = async (elementId, timeout = 5000) => {
 
 const reloadApp = async (bailOnFailure) => {
   try {
-    // disabling Detox synchronization - broken for Expo apps in Detox 18+, speeds up tests at the cost of using waitFor
-    await device.launchApp({ url: expoPublishedUrl, launchArgs: { detoxEnableSynchronization: false } });
-    // if you eject from expo, you should replace the line above with:
-    // device.reloadReactNative()
-    await waitForElementToBeVisibleById('homeScreen', 15000);
-    await waitForElementToBeVisibleById('drawerButton', 15000);
+    await device.launchApp({ url: expoPublishedUrl });
   } catch (e) {
     console.warn('Reloading app failed, retrying once');
     console.warn(e);
-    if (!bailOnFailure) {
-      await reloadApp(true);
-    }
   }
 };
 
