--- a/generators/app/templates/e2e/scripts/download-expo.sh.ejs
+++ b/generators/app/templates/e2e/scripts/download-expo.sh.ejs
@@ -17,7 +17,7 @@ if [ ! -d $APP_PATH ]; then
   mkdir $APP_PATH
 
   # query expo.io to find most recent ipaUrl
-  IPA_URL=$(curl --silent --show-error https://expo.io/--/api/v2/versions | jq -r ".iosUrl")
+  IPA_URL=$(curl --silent --show-error https://expo.io/--/api/v2/versions | jq -r '.sdkVersions."49.0.0".iosClientUrl')
 
   # download tar.gz
   TMP_PATH=./exponent.tar.gz
