--- a/generators/app/templates/app/navigation/entity-stack.js.ejs
+++ b/generators/app/templates/app/navigation/entity-stack.js.ejs
@@ -1,5 +1,6 @@
 import * as React from 'react';
-import { createStackNavigator, HeaderBackButton } from '@react-navigation/stack';
+import { createStackNavigator } from '@react-navigation/stack';
+import { HeaderBackButton } from '@react-navigation/elements';
 import { Ionicons } from '@expo/vector-icons';
 
 import { DrawerButton } from './drawer/drawer-button';
