--- a/generators/app/templates/e2e/utils.js.ejs
+++ b/generators/app/templates/e2e/utils.js.ejs
@@ -76,7 +76,7 @@ const toggleSwitchToValue = async (switchId, targetValue) => {
 const scrollTo = async (fieldId, listId, size = 0.15, direction = 'up', speed = 'slow') => {
   await waitFor(element(by.id(fieldId)))
     .toBeVisible()
-    .whileElement(by.type('ABI49_0_0RCTCustomScrollView').withAncestor(by.id(listId)))
+    .whileElement(by.type('ABI49_0_0RCTScrollView').withAncestor(by.id(listId)))
     .scroll(500, 'down');
 };
 
