--- a/generators/app/templates/e2e/websockets/chat-screen.spec.js.ejs
+++ b/generators/app/templates/e2e/websockets/chat-screen.spec.js.ejs
@@ -7,7 +7,7 @@ const {
   waitForElementToBeVisibleById,
 } = require('../utils');
 
-describe('Chat Screen Tests', () => {
+describe.skip('Chat Screen Tests', () => {
   beforeAll(async () => {
     await reloadApp()
     await loginAsUser()
