--- a/generators/app/templates/e2e/account/settings-screen.spec.js.ejs
+++ b/generators/app/templates/e2e/account/settings-screen.spec.js.ejs
@@ -8,7 +8,7 @@ const {
   waitThenTapButton,
 } = require('../utils');
 
-describe('Settings Screen Tests', () => {
+describe.skip('Settings Screen Tests', () => {
   beforeAll(async () => {
     await reloadApp();
     await loginAsUser();
