--- a/generators/app/templates/e2e/account/login-screen.spec.js.ejs
+++ b/generators/app/templates/e2e/account/login-screen.spec.js.ejs
@@ -8,7 +8,7 @@ const {
   waitThenTapButton,
 } = require('../utils');
 
-describe.skip('Login Screen Tests', () => {
+describe('Login Screen Tests', () => {
   beforeEach(async () => {
     await reloadApp();
   });
